# heic-decoder

./: .gitignore  API.md  Cargo.toml  FUTURE_WORK.md  README.md  SPEED_IMPROVEMENTS.md  TESTING.md
.agents/: heic-speed-optimization-suggestions.md
.github/workflows/: tests.yml
autoresearch/: README.md  benchmark-corpus.txt  benchmark.rs  program.md
scripts/: autoresearch.sh  gen_stress_corpus.sh  heic_tests.sh
src/: image_integration.rs  isobmff.rs  lib.rs  source.rs
src/heic-decoder/hevc/: bitstream.rs  cabac.rs  ctu.rs  deblock.rs  debug.rs  mod.rs  params.rs  picture.rs  residual.rs  sao.rs  slice.rs  transform.rs  transform_simd.rs  transforms.rs
