[package]
name = "heic_decoder"
version = "0.2.0"
edition = "2024"
description = "Pure Rust HEIF/HEIC/AVIF decoder with image crate integration hooks"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/ente-io/heic-decoder"

[features]
default = ["std", "parallel-grid"]
decoder-tracing = ["std"]
image-integration = ["dep:image"]
parallel-grid = ["std", "dep:rayon"]
std = ["archmage/std"]

[[bin]]
name = "heif-image-adapter-bench"
path = "src/bin/heif-image-adapter-bench.rs"
required-features = ["image-integration"]

[dependencies]
archmage = { version = "0.8", default-features = false, features = [
    "macros",
    "safe_unaligned_simd",
] }
brotli = "8.0"
flate2 = "1.1"
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
libc = "0.2"
moxcms = "0.8.1"
png = "0.18"
rayon = { version = "1.10", optional = true }
rav1d = { git = "https://github.com/ente-io/rav1d.git", branch = "arm32_stable", default-features = false, features = [
    "bitdepth_8",
    "bitdepth_16",
] }
safe_unaligned_simd = "0.2"
scuffle-h265 = "0.2.2"

[dev-dependencies]
qcms = "0.3.0"
